# pfmea-template

./: .gitignore  README.md  export.py  foremode.py  llm.py  pfmea.py  pfmea_aiag_vda_2019.docx  pfmea_aiag_vda_2019.xlsx  pfmea_generator.py  pfmea_generator_packaging.py  pfmea_generator_spinal.py  pfmea_spinal_peek_cage.docx  pfmea_spinal_peek_cage.xlsx  pfmea_sterile_packaging.docx  pfmea_sterile_packaging.xlsx  pyproject.toml  requirements.txt  test_foremode.py  test_llm.py  test_pfmea.py
docs/: ap-logic.md  index.html  llm-coldstart.md
scenarios/: cnc_femoral_stem.yaml  spinal_peek_cage.yaml  sterile_packaging.yaml
