[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foremode"
version = "0.2.0"
description = "Foremode — data-driven AIAG-VDA 2019 pFMEA generator: YAML in, Excel/Word/PDF out"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LSaiko" }]
keywords = ["pFMEA", "FMEA", "AIAG-VDA", "ISO 13485", "21 CFR 820", "quality engineering", "medical device"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
]
dependencies = ["openpyxl>=3.1.2", "PyYAML>=6.0"]

[project.optional-dependencies]
docs = ["python-docx>=1.1.0", "reportlab>=4.0.0"]   # Word / PDF export
llm  = ["jsonschema>=4.21"]                          # offline LLM cold-start (HTTP via stdlib)
all  = ["python-docx>=1.1.0", "reportlab>=4.0.0", "jsonschema>=4.21"]

[project.scripts]
foremode = "foremode:main"

[project.urls]
Homepage = "https://github.com/LSaiko/foremode"
Issues = "https://github.com/LSaiko/foremode/issues"

# Flat single-module layout: ship the modules + the bundled scenario library.
[tool.hatch.build.targets.wheel]
include = ["foremode.py", "export.py", "llm.py", "scenarios/*.yaml"]

[tool.hatch.build.targets.sdist]
include = ["foremode.py", "export.py", "llm.py", "scenarios/*.yaml", "docs", "README.md", "requirements.txt", "test_*.py"]
